@@ -28,6 +28,7 @@ AC_SUBST(BUILD_EXEEXT)
 
 # Set STDC_HEADERS
 AC_HEADER_STDC
+AC_LIBTOOL_WIN32_DLL
 AM_PROG_LIBTOOL
 
 # not 64 bit clean in cross-compile
@@ -64,6 +65,7 @@ PKG_CHECK_MODULES(MONO_DEPENDENCY, mono >= $MONO_REQUIRED_VERSION, has_mono=true
 
 if test "x$has_mono" = "xtrue"; then
 GACUTIL_FLAGS='/package $(PACKAGE) /gacdir $(libdir)'
+GENERATED_SOURCES=generated/*.cs
 if test `uname -s` = "Darwin"; then
 	AC_PATH_PROG(RUNTIME, mint, no)
 	AC_PATH_PROG(CSC, mcs, no)
@@ -78,6 +80,7 @@ fi
 else
 AC_PATH_PROG(CSC, csc.exe, no)
 GACUTIL_FLAGS=
+GENERATED_SOURCES=generated\\\\*.cs
 
 if test x$CSC = "xno"; then
 	AC_MSG_ERROR([You need to install either mono or .Net])
@@ -104,6 +107,7 @@ AC_SUBST(GACUTIL)
 AC_SUBST(GACUTIL_FLAGS)
 AC_SUBST(LIB_PREFIX)
 AC_SUBST(LIB_SUFFIX)
+AC_SUBST(GENERATED_SOURCES)
 
 PKG_CHECK_MODULES(GLIB, glib-2.0)
 AC_SUBST(GLIB_CFLAGS)
