@@ -1,3 +1,9 @@
+2004-06-11  Mike Kestner  <mkestner@ximian.com>
+
+	* configure.in : deal with a csc-ism in source paths.
+	* */Makefile.am : use the GENERATED_SOURCES var.
+	* */glue/Makefile.am : add -no-undefined for win32 dll builds.
+
 2004-06-10  Mike Kestner  <mkestner@ximian.com>
 
 	* configure.in : break the monodoc dep, even though it was optional
